correct spacing on frontpage gallery

--- a/style.css
+++ b/style.css
@@ -62,18 +62,25 @@ nav > a:hover {
 
 .gallery {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 300px 300px 300px;
     width: 100%;
     height: 100%;
     gap: 10px 10px;
-    justify-content: space-between;
+    justify-items: center;
+    justify-content: center;
+    margin: 10px;
+
+}
+
+.gallery > div {
+    text-align: center;
+    width: fit-content;
 }
 
 .pics {
     object-fit: contain;
     border: solid black 2px;
-    text-align: center;
-    width: fit-content;
+
 }
 
 
